objects/LLC_BI__Authorized_User__c.object
<CustomObject>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Administrator__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is to check Administrator</description>
        <label>Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Birth__c</fullName>
        <description>This is used to display date of birth from related contact.</description>
        <formula>LLC_BI__Contact_Reference__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Email_Address__c</fullName>
        <description>This field is getting populated from Email field on Contact</description>
        <formula>LLC_BI__Contact_Reference__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populates from the Contact</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Email__c</fullName>
        <description>This field is to store email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CF_Exceptions_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pos Pay Exceptions Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Install_Date__c</fullName>
        <description>This is used in Contact &gt; Administrators related list.</description>
        <formula>LLC_BI__Treasury_Service__r.CF_Install_Date_Time__c</formula>
        <label>Install Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Mobile__c</fullName>
        <description>This field is getting populated from Mobile field on Contact</description>
        <formula>LLC_BI__Contact_Reference__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populates from the Contact</inlineHelpText>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Online_Banking_Access__c</fullName>
        <description>This field is to check online banking access</description>
        <label>Online Banking Access?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Per_Day_Limit__c</fullName>
        <label>Per Day Wire Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Per_Wire_Limit__c</fullName>
        <label>Per Wire Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Phone__c</fullName>
        <description>This field is getting populated from Phone field on Contact</description>
        <formula>LLC_BI__Contact_Reference__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populates from the Contact</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Relationship__c</fullName>
        <formula>LLC_BI__Treasury_Service__r.LLC_BI__Relationship__r.Name</formula>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Stage__c</fullName>
        <formula>TEXT(LLC_BI__Treasury_Service__r.LLC_BI__Stage__c)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Check_Issuance_Parameters_Teller_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Issuance Parameters: Teller Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Name__c</fullName>
        <defaultValue>$User.FirstName +  &apos; &apos; + $User.LastName</defaultValue>
        <description>--DEPRECATED--
The authorized user&apos;s contact name.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorized User</relationshipLabel>
        <relationshipName>Authorized_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <description>--DEPRECATED--
The authorized user&apos;s contact&apos;s title.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_for_Exception_Images_and_Conting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact for Exception Images and Conting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_for_Exception_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact for Exception Pricing and Contingency Procedures</description>
        <label>Contact for Exception Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Technical_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Of the list of Authorized Users please check if this is the Technical Contact</description>
        <label>Technical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Product__c</fullName>
        <formula>LLC_BI__Treasury_Service__r.LLC_BI__Product_Reference__r.Name</formula>
        <label>Treasury Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Authorized Users</relationshipLabel>
        <relationshipName>Authorized_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized User</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AU-{00000000}</displayFormat>
        <label>Authorized User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>